# cxxurl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  cmake_example.cmake  cmake_test.cmake  cmake_uninstall.cmake  main.cpp
cmake/: cmake_check.cmake  cmake_example.cmake  cmake_test.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in
cxxurl/: CMakeLists.txt  Header.cpp  Header.h  RawForm.h  Request.cpp  Request.h  RequestBuilder.cpp  RequestBuilder.h  SimpleForm.cpp  version.h
cxxurl/cxxurl/: Form.h  Header.cpp  HeaderParserStream.cpp  HeaderParserStream.h  MultipartForm.cpp  MultipartForm.h  ParseableOutputStringStream.h  RawForm.cpp  RawForm.h  Request.cpp  Request.h  RequestBuilder.cpp  RequestBuilder.h  ResponseHeader.h  SimpleForm.cpp  SimpleForm.h  StringUtils.h  UrlEncode.cpp  UrlEncode.h  Version.cpp  Version.h  cxxurl_all.h
example/: CMakeLists.txt  example_cookie.cpp  example_download.cpp  example_get.cpp  example_get_https_disable.cpp  example_get_https_enable.cpp  example_post.cpp  example_response_header.cpp  example_set_header.cpp  example_use_curl_option.cpp  example_without_request_builder.cpp  main.cpp
example_server/: server.php  start_server
examples/: example_cookie.cpp  example_download.cpp  example_get.cpp  example_get_https_disable.cpp  example_get_https_enable.cpp  example_method.cpp  example_parse_json_body.cpp  example_parse_response_header.cpp  example_post.cpp  example_response_header.cpp  example_set_header.cpp  example_set_request_header.cpp  example_use_curl_option.cpp  example_without_request_builder.cpp
include/: CXXUrl.h  MultipartForm.h  Request.h  RequestBuilder.h  SimpleForm.h
src/: Form.cpp  Header.cpp  MultipartForm.cpp  RawForm.cpp  RawForm.h  Request.cpp  RequestBuilder.cpp  SimpleForm.cpp  UrlEncode.cpp  cxxurl.cpp  cxxurl_all.cpp  cxxurl_all.h
src/cxxurl/: Form.h  FormItem.h  Header.h  JsonBodyParserStream.h  MultipartForm.h  ParseableOutputStringStream.h  RawForm.h  RawRequestBody.h  Request.h  RequestBody.h  RequestBuilder.h  RequestHeader.h  ResponseHeader.h  SimpleForm.h  StringUtils.h  UrlEncode.h  UrlEncoder.h  Version.h  cxxurl_all.h
tests/: TestSimpleForm.cpp  TestUrlEncode.cpp  ez_test.h  test_simple_form.cpp  test_string_utils.cpp  test_url_encoder.cpp  test_urlencode_urldecode.cpp
